--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -15,5 +15,7 @@ parameters:
     mailer_user: ~
     mailer_password: ~
     jwt_key_pass_phrase: ~
+    ban_minutes: ~
+    ban_max_count: ~
     # A secret key that's used to generate certain security-related tokens
     secret: ThisTokenIsNotSoSecretChangeIt
