--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -38,7 +38,8 @@ framework:
 twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
-
+    globals:
+            web_dir: "%kernel.root_dir%/../web"
 # Doctrine Configuration
 doctrine:
     dbal:
