--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,8 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "jms/serializer-bundle": "^1.1",
         "lexik/jwt-authentication-bundle": "^2.4",
+        "mpdf/mpdf": "^6.1",
+        "sallar/jdatetime": "dev-master",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/monolog-bundle": "^3.0.2",
