--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.2.*",
         "twig/twig": "^1.0||^2.0",
+        "whiteoctober/tcpdf-bundle": "^1.0",
         "white-october/pagerfanta-bundle": "^1.0"
     },
     "require-dev": {
