--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "jms/serializer-bundle": "^1.1",
         "lexik/jwt-authentication-bundle": "^2.4",
+        "liuggio/excelbundle": "^2.1",
         "mpdf/mpdf": "^6.1",
         "sallar/jdatetime": "dev-master",
         "sensio/distribution-bundle": "^5.0",
