--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,13 @@
         "php": ">=5.5.9",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
+        "doctrine/doctrine-migrations-bundle": "^1.0",
         "doctrine/orm": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
         "jms/serializer-bundle": "^1.1",
         "lexik/jwt-authentication-bundle": "^2.4",
         "liuggio/excelbundle": "^2.1",
-        "mpdf/mpdf": "^6.1",
+        "mpdf/mpdf": "6.1.3",
         "sallar/jdatetime": "dev-master",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
